--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.app {
+/* .app {
   display: flex;
   height: 100%;
 }
@@ -7,4 +7,4 @@
     display: flex;
     flex-direction: column;
   }
-}
+} */
